--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<title>My first git test</title>
+	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 <h1>Only for testing</h1>
